--- a/pages/basicaPage/ingles.html
+++ b/pages/basicaPage/ingles.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!--CSS LINK -->
+    <!--CSS LINK-->
     <link rel="stylesheet" href="/css/style.css" />
     <!--Favicon-->
     <link rel="shortcut icon" href="/faviconTI.png" type="image/x-icon" />
@@ -20,7 +20,7 @@
     <title>Projeto TI</title>
   </head>
   <body>
-    <div class="container01">
+    <div class="container02">
       <header class="headerContent">
         <div class="headerText">
           <a href="/pages/home.html" class="logoAnchor text-center">
@@ -77,27 +77,58 @@
           </div>
         </div>
       </header>
-      <div class="homePageContainer">
-        <div class="introText">
-          <div data-aos="fade-up" data-aos-duration="3000">
-            <h1 class="display-3" id="introText">BEM-VINDO(A)</h1>
-            <p id="paragraphIntro">
-              AQUI VOCÊ ENCONTRA INFORMAÇOẼS FUNDAMENTAIS DA INFORMÁTICA DE
-              FORMA AMPLA E COMPLETA!
-            </p>
-          </div>
-        </div>
+      <div class="containerText">
+        <h3 class="titleContainerText">
+          English Technical in Computer Science <br />
+          (Inglês Técnico em Informática)
+        </h3>
+        <p class="paragraphContainerText">
+          <strong>Introdução</strong> <br />
+          O inglês técnico a forma de inglês utilizada em documentos e
+          comunicações técnicas no campo da informática. É importante porque
+          permite que profissionais de informática de todo o mundo possam se
+          comunicar de maneira clara e efetiva, compartilhar conhecimento e
+          colaborar em projetos. O inglês técnico em informática é usado em
+          diversos contextos, como documentação de software, apresentações
+          técnicas, artigos científicos, e-mails corporativos, entre outros.
+          Além disso, é uma habilidade fundamental para muitos profissionais de
+          tecnologia, especialmente aqueles que trabalham em empresas
+          multinacionais ou que buscam oportunidades de carreira em outros
+          países. <br />
+          <br />
+          <strong>Vocabulário: </strong>
+          <br />O vocabulário do inglês técnico em informática é composto por
+          termos técnicos específicos da área, como "algoritmo", "software",
+          "hardware", "protocolo", entre outros. É importante conhecer o
+          significado desses termos e usá-los corretamente em contextos
+          técnicos.<br />
+          <br />
+          <strong>Gramática:</strong> <br />A gramática usada no inglês técnico
+          em informática é clara e concisa, evitando frases longas e complexas.
+          Além disso, o uso de voz ativa é incentivado para tornar a comunicação
+          mais clara e objetiva. <br />
+          <br />
+          <strong>Escrita clara e precisa:</strong> <br />A escrita clara e
+          precisa é crucial no inglês técnico em informática, pois permite que
+          as informações sejam transmitidas de maneira efetiva. É importante
+          usar frases curtas e diretas, evitando jargões e abreviações não
+          comuns.<br />
+          <br />
+          <strong>Documentação de software:</strong> <br />A documentação de
+          software é uma parte importante do inglês técnico em informática, que
+          inclui manuais de usuário, guias de programação e documentação
+          técnica. A documentação deve ser clara, concisa e fácil de entender
+          para usuários e desenvolvedores. <br />
+          <br />
+          <br />
+          <i
+            >Esses são apenas alguns exemplos dos tópicos que compõem o Inglês
+            Técnico em Informática. É importante praticar a leitura, escrita e
+            conversação em inglês técnico para desenvolver suas habilidades na
+            área.
+          </i>
+        </p>
       </div>
     </div>
-
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-      crossorigin="anonymous"
-    ></script>
-    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <script>
-      AOS.init();
-    </script>
   </body>
 </html>
