--- a/pages/basicaPage/introinfo.html
+++ b/pages/basicaPage/introinfo.html
@@ -7,7 +7,7 @@
     <!--CSS LINK-->
     <link rel="stylesheet" href="/css/style.css" />
     <!--Favicon-->
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="/faviconTI.png" type="image/x-icon" />
     <!--BOOTSTRAP LINK-->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -20,7 +20,7 @@
     <title>Projeto TI</title>
   </head>
   <body>
-    <div class="containerSubPage">
+    <div class="container02">
       <header class="headerContent">
         <div class="headerText">
             <a href="/pages/home.html" class="logoAnchor text-center">
@@ -34,6 +34,9 @@
                 <a class="anchorNav" href="/pages/basicaPage/introinfo.html"
                   >Introdução á Informática</a
                 >
+                <a class="anchorNav" href="/pages/basicaPage/ingles.html"
+                >Inglês Técnico</a
+              >
                 <a class="anchorNav" href="/pages/basicaPage/fundamentos.html"
                   >Fundamentos de Hardware e Software</a
                 >
@@ -72,7 +75,7 @@
               </button>
             </div>
           </div>
-        </div>
+      
       </header>
   <div class="containerText">
     <h3 class="titleContainerText">Introdução á Informática</h3>
@@ -150,8 +153,22 @@ pontuação, 1 espaço.
   </tr>
   </tbody>
   </table>
-  </div>
+  <p class="paragraphContainerText">
+    <strong>Como o computador entende os comandos :</strong> <br> 
+    Quando você dá um comando para o computador, ele precisa ser convertido em linguagem de máquina para que o computador possa entendê-lo e executá-lo. Aqui está um resumo do processo:
 
+    <ul>
+      <li>Interpretação de comando: O sistema operacional (SO) interpreta o comando que você digitou e identifica a ação que precisa ser realizada.</li>
+      <li>Tradução para código de máquina: O comando é traduzido para uma série de instruções em linguagem de máquina, que o computador pode compreender e executar.</li>
+      <li>Execução do comando: O processador (CPU) executa as instruções em linguagem de máquina, realizando a ação requerida.</li>
+      <li>Resultado: O resultado da ação é exibido na tela ou armazenado em um dispositivo de armazenamento, como um disco rígido.</li>
+
+    </ul>
+    <br>
+    <i>Em geral, esse processo acontece muito rapidamente, permitindo que o computador responda a seus comandos imediatamente. Além disso, a maioria dos sistemas operacionais inclui uma camada de abstração que esconde a complexidade da linguagem de máquina e permite que você dê comandos de uma forma mais intuitiva e fácil de usar.  </i>
+  </p>
+  </div>
+</div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
