--- a/pages/basicaPage/fundamentos.html
+++ b/pages/basicaPage/fundamentos.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!--CSS LINK-->
+    <!--CSS LINK (Estilização da página)-->
     <link rel="stylesheet" href="/css/style.css" />
-    <!--Favicon-->
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-    <!--BOOTSTRAP LINK-->
+    <!--FAVICON LINK (Icone da página)-->
+    <link rel="shortcut icon" href="/faviconTI.png" type="image/x-icon" />
+    <!--BOOTSTRAP LINK (Conjunto de ferramentas)-->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-    <!--Animation Install-->
+    <!--AOS ANIMATION (Animação de texto)-->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <title>Projeto TI</title>
   </head>
@@ -35,6 +35,9 @@
               <a class="anchorNav" href="/pages/basicaPage/introinfo.html"
                 >Introdução á Informática</a
               >
+              <a class="anchorNav" href="/pages/basicaPage/ingles.html"
+              >Inglês Técnico</a
+            >
               <a class="anchorNav" href="/pages/basicaPage/fundamentos.html"
                 >Fundamentos de Hardware e Software</a
               >
