--- a/pages/basicaPage/programacao1.html
+++ b/pages/basicaPage/programacao1.html
@@ -7,7 +7,7 @@
     <!--CSS LINK-->
     <link rel="stylesheet" href="/css/style.css" />
     <!--Favicon-->
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="/faviconTI.png" type="image/x-icon" />
     <!--BOOTSTRAP LINK-->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -34,6 +34,9 @@
                 <a class="anchorNav" href="/pages/basicaPage/introinfo.html"
                   >Introdução á Informática</a
                 >
+                <a class="anchorNav" href="/pages/basicaPage/ingles.html"
+                >Inglês Técnico</a
+              >
                 <a class="anchorNav" href="/pages/basicaPage/fundamentos.html"
                   >Fundamentos de Hardware e Software</a
                 >
@@ -72,7 +75,7 @@
               </button>
             </div>
           </div>
-        </div>
+        
       </header>
   <div class="containerText">
     <h3 class="titleContainerText">Lógica de Programação I</h3>
@@ -180,7 +183,7 @@ Portugol com o auxilio do computador.
     </p>
   
   </div>
-
+</div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
