--- a/pages/intermedioPage/redes.html
+++ b/pages/intermedioPage/redes.html
@@ -7,7 +7,7 @@
     <!--CSS LINK-->
     <link rel="stylesheet" href="/css/style.css" />
     <!--Favicon-->
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="/faviconTI.png" type="image/x-icon" />
     <!--BOOTSTRAP LINK-->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -23,7 +23,7 @@
     <div class="container02">
       <header class="headerContent">
         <div class="headerText">
-          <a class="logoAnchor text-center">
+          <a href="/pages/home.html" class="logoAnchor text-center">
             <h3><mark id="titleLogo">INFORMÁTICA</mark></h3>
             <p>O ENSINO INTEGRADOR DA TECNOLOGIA</p></a
           >
@@ -35,6 +35,9 @@
               <a class="anchorNav" href="/pages/basicaPage/introinfo.html"
                 >Introdução á Informática</a
               >
+              <a class="anchorNav" href="/pages/basicaPage/ingles.html"
+              >Inglês Técnico</a
+            >
               <a class="anchorNav" href="/pages/basicaPage/fundamentos.html"
                 >Fundamentos de Hardware e Software</a
               >
